--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-calendly": "^4.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
     "swiper": "^11.1.3",
